fix hud selection and z-index

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,17 @@ h2 {
   width: 1040px;
   margin: auto;
   position: relative;
+  z-index: 50;
+  pointer-events: none;
+  user-select: none;
+  cursor: crosshair;
+  cursor: crosshair;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
   .hud div {
